--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^5.0.3",
     "react-router": "^3.0.0-alpha.3",
     "react-router-dom": "^4.2.2",
+    "react-table": "^6.7.6",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-promise": "^0.5.3",
@@ -35,13 +36,13 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-env": "^1.6.0",
-    "babel-runtime": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-loose": "^8.0.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-runtime": "^6.26.0",
     "bloodhound-js": "^1.2.1",
     "bootstrap-sass": "^3.3.7",
     "bootstrap-tagsinput": "^0.7.1",
