--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -10,6 +10,12 @@ filter:
         - "var/"
         - "vendor/"
 build:
+    nodes:
+        analysis:
+            project_setup:
+                override: true
+            tests:
+                override: [php-scrutinizer-run]
     environment:
         php:
             version: 7.1.12
