Add user character module
Add use character module
Add API endpoint to fech user character per user code

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -46,3 +46,8 @@ services:
         factory: 'App\Utils\CrawlerFactory:get'
         arguments:
             $crawler: 'user'
+
+    App\Utils\UserCharacterCrawler:
+        factory: 'App\Utils\CrawlerFactory:get'
+        arguments:
+            $crawler: 'user-character'
