--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-fontawesome": "^1.6.1",
     "react-immutable-proptypes": "^2.1.0",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.0-alpha.3",
