--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "javiereguiluz/easyadmin-bundle": "^1.17",
         "jms/serializer": "^1.10",
         "jms/serializer-bundle": "^2.3",
+        "lexik/jwt-authentication-bundle": "^2.4",
         "nelmio/api-doc-bundle": "^3.0",
         "sensio/framework-extra-bundle": "^5.0",
         "sensiolabs/security-checker": "^4.1",
