--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^16.2.0",
     "react-feather": "^1.0.8",
     "react-fontawesome": "^1.6.1",
+    "react-forms": "^1.0.0-rc6",
     "react-immutable-proptypes": "^2.1.0",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.0-alpha.3",
@@ -26,6 +27,7 @@
     "react-table": "^6.7.6",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
+    "redux-form": "^7.2.3",
     "redux-promise": "^0.5.3",
     "redux-react-router": "^1.0.0-beta3",
     "redux-thunk": "^2.2.0",
