--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -35,9 +35,9 @@ security:
                 query_parameter:
                     enabled: true
                     name:    bearer
-            guard:
-                authenticators:
-                    - lexik_jwt_authentication.jwt_token_authenticator
+#            guard:
+#                authenticators:
+#                    - lexik_jwt_authentication.jwt_token_authenticator
 
             logout:
                 # The route name the user can go to in order to logout
