--- a/.eslintrc
+++ b/.eslintrc
@@ -8,12 +8,14 @@
   ],
   "rules": {
     "no-underscore-dangle": ["error", { "allow": [ "_embedded" ] }],
-    "no-alert": 'warn',
-    "jsx-a11y/no-static-element-interactions": 'warn',
-    "react/no-unused-prop-types": 'warn',
-    "react/no-did-mount-set-state": 'warn',
-    "react/no-danger": 'warn',
-    "no-param-reassign": 'warn'
+    "no-alert": "warn",
+    "jsx-a11y/no-static-element-interactions": "warn",
+    "react/no-unused-prop-types": "warn",
+    "react/no-did-mount-set-state": "warn",
+    "react/no-danger": "warn",
+    "no-param-reassign": "warn",
+    "semi": [2, "never"],
+    "no-undef": 0
   },
   "globals": {
     "confirm": true,
@@ -26,5 +28,5 @@
     "ecmaFeatures": {
       "jsx": true
     }
-  },
+  }
 }
