--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.0.0-alpha.6",
     "feather-icons": "^4.5.0",
     "history": "1.13.x",
+    "history-prop-types": "^2.1.9",
     "lodash": "^4.0.0",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
@@ -22,9 +23,11 @@
     "react-forms": "^1.0.0-rc6",
     "react-immutable-proptypes": "^2.1.0",
     "react-redux": "^5.0.3",
-    "react-router": "^3.0.0-alpha.3",
+    "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^4.0.8",
     "react-table": "^6.7.6",
+    "reactjs-localstorage": "0.0.6",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-form": "^7.2.3",
