--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.0.0",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-feather": "^1.0.8",
     "react-fontawesome": "^1.6.1",
