Add redux-persist store + app tweaks

--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.0.0-alpha.6",
     "feather-icons": "^4.5.0",
-    "history": "1.13.x",
     "history-prop-types": "^2.1.9",
     "lodash": "^4.0.0",
     "prop-types": "^15.6.0",
@@ -32,6 +31,8 @@
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-form": "^7.2.3",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^5.7.2",
     "redux-promise": "^0.5.3",
     "redux-react-router": "^1.0.0-beta3",
     "redux-thunk": "^2.2.0",
