--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
     "react-table": "^6.7.6",
+    "react-timeout": "^1.0.1",
     "reactjs-localstorage": "0.0.6",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
