Add tooltip to guild squad grid
remove squad
fixes

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
+    "react-confirm-alert": "^1.0.8",
     "react-dom": "^16.2.0",
     "react-feather": "^1.0.8",
     "react-fontawesome": "^1.6.1",
@@ -28,6 +29,7 @@
     "react-router-redux": "^4.0.8",
     "react-table": "^6.7.6",
     "react-timeout": "^1.0.1",
+    "react-tippy": "^1.2.2",
     "reactjs-localstorage": "0.0.6",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
