--- a/config/packages/fos_rest.yaml
+++ b/config/packages/fos_rest.yaml
@@ -2,6 +2,16 @@
 fos_rest:
     routing_loader:
         default_format: json
+#
+#    exception:
+#        enabled: true
+#
+#        codes:
+#            'App\Exception\DuplicateUserException': 404
+#        messages:
+#            'App\Exception\DuplicateUserException': true
+#        exception_controller: 'fos_rest.exception.controller:showAction'
+
 
 #    param_fetcher_listener:  true
 #    allowed_methods_listener:  true
