--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "erusev/parsedown": "^1.6",
         "ezyang/htmlpurifier": "^4.9",
         "friendsofsymfony/rest-bundle": "^2.3",
+        "gedmo/doctrine-extensions": "^2.4",
         "javiereguiluz/easyadmin-bundle": "^1.17",
         "jms/serializer": "^1.10",
         "jms/serializer-bundle": "^2.3",
