--- a/config/services.yaml
+++ b/config/services.yaml
@@ -55,3 +55,9 @@ services:
         factory: 'App\Utils\CrawlerFactory:get'
         arguments:
             $crawler: 'user-character'
+
+    Gedmo\Timestampable\TimestampableListener:
+        tags:
+            - { name: doctrine.event_subscriber, connection: default }
+        calls:
+            - [ 'setAnnotationReader', [ '@annotation_reader' ] ]
