--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "ext-pdo_sqlite": "*",
         "api-platform/core": "^2.1",
         "doctrine/doctrine-fixtures-bundle": "^3.0",
+        "eightpoints/guzzle-bundle": "^7.3",
         "erusev/parsedown": "^1.6",
         "ezyang/htmlpurifier": "^4.9",
         "friendsofsymfony/rest-bundle": "^2.3",
