--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "auth0-js": "^9.2.2",
     "axios": "^0.17.1",
     "babel-polyfill": "^6.26.0",
-    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap": "^4.0.0",
     "feather-icons": "^4.5.0",
+    "history": "^4.7.2",
     "history-prop-types": "^2.1.9",
-    "lodash": "^4.0.0",
+    "lodash": "^4.17.5",
+    "path-to-regexp": "^2.2.0",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
@@ -33,7 +35,7 @@
     "reactjs-localstorage": "0.0.6",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
-    "redux-form": "^7.2.3",
+    "redux-form": "^7.3.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.7.2",
     "redux-promise": "^0.5.3",
@@ -41,7 +43,9 @@
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
     "styled-components": "^2.4.0",
+    "uuid": "^3.2.1",
     "validator": "^7.0.0",
+    "warning": "^3.0.0",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
