--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-feather": "^1.0.8",
     "react-fontawesome": "^1.6.1",
     "react-forms": "^1.0.0-rc6",
+    "react-ga": "^2.4.1",
     "react-immutable-proptypes": "^2.1.0",
     "react-redux": "^5.0.3",
     "react-router": "^4.2.0",
