--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-table": "^6.7.6",
     "react-timeout": "^1.0.1",
     "react-tippy": "^1.2.2",
+    "react-youtube": "^7.5.0",
     "reactjs-localstorage": "0.0.6",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
