--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,4 @@
-    {
+{
     "license": "MIT",
     "type": "project",
     "require": {
@@ -16,7 +16,7 @@
         "jms/serializer-bundle": "^2.3",
         "lexik/jwt-authentication-bundle": "^2.4",
         "nelmio/api-doc-bundle": "^3.0",
-        "phpmetrics/phpmetrics": "^2.3",
+        "nikic/php-parser": "^4.0",
         "sensio/framework-extra-bundle": "^5.0",
         "sensiolabs/security-checker": "^4.1",
         "symfony/asset": "^4.0",
@@ -25,7 +25,7 @@
         "symfony/flex": "^1.0",
         "symfony/form": "^4.0",
         "symfony/framework-bundle": "^4.0",
-        "symfony/maker-bundle": "^1.0",
+        "symfony/maker-bundle": "^1.3",
         "symfony/monolog-bundle": "^3.1",
         "symfony/orm-pack": "^1.0",
         "symfony/polyfill-apcu": "^1.5",
@@ -43,6 +43,7 @@
     "require-dev": {
         "dama/doctrine-test-bundle": "^4.0",
         "friendsofphp/php-cs-fixer": "^2.7",
+        "fzaninotto/faker": "^1.7",
         "symfony/browser-kit": "^4.0",
         "symfony/css-selector": "^4.0",
         "symfony/debug-bundle": "^4.0",
@@ -50,8 +51,7 @@
         "symfony/phpunit-bridge": "^4.0",
         "symfony/profiler-pack": "^1.0",
         "symfony/var-dumper": "^4.0",
-        "symfony/web-server-bundle": "^4.0",
-        "fzaninotto/faker": "^1.7"
+        "symfony/web-server-bundle": "^4.0"
     },
     "config": {
         "platform": {
