--- a/package.json
+++ b/package.json
@@ -4,49 +4,50 @@
     "dev": "./node_modules/.bin/encore dev",
     "watch": "./node_modules/.bin/encore dev --watch",
     "build": "./node_modules/.bin/encore production",
-    "lint": "eslint --ext .jsx --ext .js assets/js"
+    "lint": "eslint --ext .jsx --ext .js assets/js",
+    "start:dev": "webpack-dev-server"
   },
   "dependencies": {
-    "auth0-js": "^9.4.2",
-    "axios": "^0.17.1",
+    "auth0-js": "^9.7.2",
+    "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
-    "bootstrap": "^4.0.0",
-    "feather-icons": "^4.7.0",
+    "bootstrap": "^4.1.2",
+    "feather-icons": "^4.7.3",
     "history": "^4.7.2",
-    "history-prop-types": "^2.3.0",
-    "lodash": "^4.17.5",
-    "path-to-regexp": "^2.2.0",
-    "prop-types": "^15.6.1",
-    "react": "^16.3.1",
+    "history-prop-types": "^2.5.2",
+    "lodash": "^4.17.10",
+    "path-to-regexp": "^2.2.1",
+    "prop-types": "^15.6.2",
+    "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
-    "react-confirm-alert": "^1.0.8",
-    "react-dom": "^16.3.1",
-    "react-feather": "^1.1.0",
+    "react-confirm-alert": "^2.0.5",
+    "react-dom": "^16.4.1",
+    "react-feather": "^1.1.1",
     "react-fontawesome": "^1.6.1",
     "react-forms": "^1.0.0-rc6",
-    "react-ga": "^2.4.1",
+    "react-ga": "^2.5.3",
     "react-immutable-proptypes": "^2.1.0",
     "react-redux": "^5.0.7",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
-    "react-table": "^6.8.0",
-    "react-tag-input": "^4.9.1",
+    "react-table": "^6.8.6",
+    "react-tag-input": "^5.1.0",
     "react-timeout": "^1.1.1",
     "react-tippy": "^1.2.2",
-    "react-youtube": "^7.5.0",
-    "reactjs-localstorage": "0.0.6",
+    "react-youtube": "^7.6.0",
+    "reactjs-localstorage": "^0.0.6",
     "redux": "^3.6.0",
-    "redux-devtools-extension": "^2.13.2",
-    "redux-form": "^7.3.0",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-form": "^7.4.2",
     "redux-logger": "^3.0.6",
-    "redux-persist": "^5.9.1",
+    "redux-persist": "^5.10.0",
     "redux-promise": "^0.5.3",
     "redux-react-router": "^1.0.0-beta3",
-    "redux-thunk": "^2.2.0",
+    "redux-thunk": "^2.3.0",
     "reselect": "^3.0.1",
-    "styled-components": "^2.4.0",
-    "uuid": "^3.2.1",
+    "styled-components": "^2.4.1",
+    "uuid": "^3.3.2",
     "validator": "^7.0.0",
     "warning": "^3.0.0",
     "whatwg-fetch": "^2.0.4"
@@ -54,13 +55,13 @@
   "devDependencies": {
     "@symfony/webpack-encore": "github:symfony/webpack-encore",
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.2",
-    "babel-loader": "^7.1.4",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.6",
+    "babel-loader": "^7.1.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-loose": "^8.0.0",
     "babel-preset-react": "^6.24.1",
@@ -73,7 +74,7 @@
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "eslint": "^3.15.0",
     "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-import": "^2.10.0",
+    "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^3.0.2 || ^4.0.0",
     "eslint-plugin-react": "^6.9.0",
     "font-awesome": "^4.7.0",
@@ -81,7 +82,8 @@
     "imports-loader": "^0.7.1",
     "jquery": "^3.2.1",
     "lato-font": "^3.0.0",
-    "node-sass": "^4.8.3",
+    "node-sass": "^4.9.2",
+    "react-hot-loader": "^4.3.3",
     "sass-loader": "^6.0.7",
     "typeahead.js": "^0.11.1"
   }
