--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "start:dev": "webpack-dev-server"
   },
   "dependencies": {
-    "auth0-js": "^9.7.2",
+    "auth0-js": "^9.7.3",
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
-    "bootstrap": "^4.1.2",
+    "bootstrap": "^4.1.3",
     "feather-icons": "^4.7.3",
     "history": "^4.7.2",
     "history-prop-types": "^2.5.2",
@@ -32,7 +32,7 @@
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
     "react-table": "^6.8.6",
-    "react-tag-input": "^5.1.0",
+    "react-tag-input": "^4.9.1",
     "react-timeout": "^1.1.1",
     "react-tippy": "^1.2.2",
     "react-youtube": "^7.6.0",
@@ -53,7 +53,7 @@
     "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
-    "@symfony/webpack-encore": "github:symfony/webpack-encore",
+    "@symfony/webpack-encore": "^0.17.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
@@ -67,7 +67,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.26.0",
-    "bloodhound-js": "^1.2.1",
+    "bloodhound-js": "^1.2.3",
     "bootstrap-sass": "^3.3.7",
     "bootstrap-tagsinput": "^0.7.1",
     "bootswatch": "^3.3.7",
