--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "nikic/php-parser": "^4.0",
         "sensio/framework-extra-bundle": "^5.0",
         "sensiolabs/security-checker": "^4.1",
+        "symfony/apache-pack": "^1.0",
         "symfony/asset": "^4.0",
         "symfony/dom-crawler": "^4.0",
         "symfony/expression-language": "^4.0",
