Fix package deps

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "feather-icons": "^4.7.3",
     "history": "^4.7.2",
     "history-prop-types": "^2.5.2",
+    "hoek": "^5.0.4",
     "lodash": "^4.17.10",
     "path-to-regexp": "^2.2.1",
     "prop-types": "^15.6.2",
@@ -47,6 +48,7 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^3.0.1",
     "styled-components": "^2.4.1",
+    "url-parse": "^1.4.3",
     "uuid": "^3.3.2",
     "validator": "^7.0.0",
     "warning": "^3.0.0",
